--- a/src/components/Style/main.css
+++ b/src/components/Style/main.css
@@ -1,6 +1,8 @@
 .main {
     font-size: 30px;
     color: #000000;
+    width: 1440px;
+    margin: 0 auto;
 }
 .header-title {
     margin: 0px;
@@ -30,4 +32,21 @@
 .row-bg {
     padding: 10px 0;
     background-color: #f9fafc;
+}
+.el-table tr {
+    line-height: 0;
+    border-radius: 4px;
+}
+.el-table th.is-leaf {
+    background-color: #50CBF5;
+}
+.el-table--border {
+    border-radius: 10px;
+}
+.addUser {
+    float: right;
+}
+.el-dialog__title {
+    display: block;
+    font-weight: bold;
 }
